--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <html>
-  
+  <head>
+    <meta charset="UTF-8">
+    <title>
+      TEST
+    </title>
+  </head>
+  <body>
+    
+  </body>
 </html>
