--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>🎧</title>
+	<title>🎧 удалил все нахуй</title>
 	<style>
 		body {
 			font-family: Arial, sans-serif;
@@ -89,28 +89,6 @@
 	</style>
 </head>
 <body>
-	<div class="container">
-		<img id="cover" class="cover" src="/images/default-cover.jpg" alt="Обложка">
-		<div class="track-info">
-			<div id="trackName" class="track-name">P2P Радио - Двухканальный</div>
-			<div id="trackArtist" class="track-artist">Нажмите кнопку ниже</div>
-		</div>
-		
-		<div class="channel-status">
-			<div id="channelA" class="channel channel-a">
-				<div class="channel-name">КАНАЛ A</div>
-				<div id="channelAState" class="channel-state">ожидание</div>
-				<div id="channelAVolume" class="channel-volume">громкость: 0%</div>
-			</div>
-			<div id="channelB" class="channel channel-b">
-				<div class="channel-name">КАНАЛ B</div>
-				<div id="channelBState" class="channel-state">ожидание</div>
-				<div id="channelBVolume" class="channel-volume">громкость: 0%</div>
-			</div>
-		</div>
 
-		<button id="connectBtn" onclick="connectToRadio()">🎵 ВКЛЮЧИТЬ РАДИО</button>
-	</div>
-    
 </body>
 </html>
