--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>🎧 удалил все нахуй</title>
+	<title>🎧 удалил все нахуй!!!</title>
 </head>
 <body>
 
